Adjust for different packages

--- a/hyprland/execs.conf
+++ b/hyprland/execs.conf
@@ -1,7 +1,5 @@
 # Set wallpaper
-exec-once = sleep 0.7; [ "$(hyprctl monitors -j | jq 'length')" -eq 1 ] && swww-daemon --format xrgb --no-cache || swww-daemon --format xrgb
-exec-once = sleep 0.7; swww img "$(cat ~/.local/state/quickshell/user/generated/wallpaper/path.txt)" --transition-step 100 --transition-fps 120 --transition-type grow --transition-angle 30 --transition-duration 1
-
+exec-once = hyprpaper
 # Core components (authentication, lock screen, notification daemon)
 exec-once = gnome-keyring-daemon --start --components=secrets
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 || /usr/libexec/polkit-kde-authentication-agent-1  || /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 || /usr/libexec/polkit-gnome-authentication-agent-1
