--- a/hyprland/keybinds.conf
+++ b/hyprland/keybinds.conf
@@ -17,7 +17,7 @@ bind = Super+Shift, S, exec, hyprshot --freeze --clipboard-only --mode region --
 bind = Super+Shift, C, exec, hyprpicker -a
 
 # Clipboard history
-bind = Super, V, exec, cliphist list | fuzzel --match-mode fzf --dmenu | cliphist decode | wl-copy
+bind = Super, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
 # Switch workspaces
 bind = Ctrl+Super, Right, workspace, +1
@@ -78,7 +78,7 @@ bind = Super, Q, killactive
 bind = Super+Shift+Alt, Q, exec, hyprctl kill # Force
 
 # Open Launcher
-bindid = Super, Super_L, , exec, rofi -show drun
+bindid = Super, Super_L, , exec, wofi -show drun
 binditn = Super, catchall, submap, reset
 
 # Launch apps
