--- a/hyprland/general.conf
+++ b/hyprland/general.conf
@@ -1,49 +1,24 @@
-# MONITOR CONFIG
-monitor=,preferred,auto,1,transform, 0
-# monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
-
-# HDMI port: mirror display. To see device name, use `hyprctl monitors`
-# monitor=HDMI-A-1,1920x1080@60,1920x0,1,mirror,eDP-1
-
-gestures {
-    workspace_swipe = true
-    workspace_swipe_distance = 700
-    workspace_swipe_fingers = 3
-    workspace_swipe_min_fingers = true
-    workspace_swipe_cancel_ratio = 0.2
-    workspace_swipe_min_speed_to_force = 5
-    workspace_swipe_direction_lock = true
-    workspace_swipe_direction_lock_threshold = 10
-    workspace_swipe_create_new = true
-}
+monitor= , preferred, auto, 1.2, transform, 0
 
 general {
-    # Gaps and border
-    gaps_in = 4
+    gaps_in = 5
     gaps_out = 5
-    gaps_workspaces = 50
-    
-    border_size = 1
-    col.active_border = rgba(0DB7D4FF)
-    col.inactive_border = rgba(31313600)
+
+    border_size = 2
+    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.inactive_border = rgba(595959aa)
     resize_on_border = true
 
     no_focus_fallback = true
-    
-    allow_tearing = true # This just allows the `immediate` window rule to work
-    
+
+    allow_tearing = true
+
     snap {
     	enabled = true
     }
 }
 
-dwindle {
-    preserve_split = true
-    smart_split = false
-    smart_resizing = false
-    # precise_mouse_move = true
-}
-
+# https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 10
 
@@ -81,6 +56,7 @@ decoration {
     dim_special = 0.07
 }
 
+# https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = true
     # Curves
@@ -111,6 +87,35 @@ animations {
     animation = specialWorkspaceOut, 1, 1.2, emphasizedAccel, slidevert
 }
 
+# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+dwindle {
+    preserve_split = true
+    smart_split = false
+    smart_resizing = false
+    # precise_mouse_move = true
+}
+
+# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+master {
+    new_status = master
+}
+
+# https://wiki.hyprland.org/Configuring/Variables/#misc
+misc {
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
+    vfr = true
+    vrr = 1
+    mouse_move_enables_dpms = true
+    key_press_enables_dpms = true
+    animate_manual_resizes = false
+    animate_mouse_windowdragging = false
+    new_window_takes_over_fullscreen = 2
+    allow_session_lock_restore = true
+    initial_workspace_tracking = false
+    focus_on_activate = true
+}
+
 input {
     kb_layout = us
     numlock_by_default = true
@@ -127,43 +132,12 @@ input {
     }
 }
 
-misc {
-    disable_hyprland_logo = true
-    disable_splash_rendering = true
-    vfr = true
-    vrr = 1
-    mouse_move_enables_dpms = true
-    key_press_enables_dpms = true
-    animate_manual_resizes = false
-    animate_mouse_windowdragging = false
-    enable_swallow = false
-    swallow_regex = (foot|kitty|allacritty|Alacritty)
-    new_window_takes_over_fullscreen = 2
-    allow_session_lock_restore = true
-    initial_workspace_tracking = false
-    focus_on_activate = true
+gestures {
+    workspace_swipe = false
 }
 
-binds {
-    scroll_event_delay = 0
-    hide_special_on_workspace_change = true
-}
+# Ignore maximize requests from apps. You'll probably like this.
+windowrule = suppressevent maximize, class:.*
 
-cursor {
-    zoom_factor = 1
-    zoom_rigid = false
-}
-
-# Overview
-plugin {
-    hyprexpo {
-        columns = 3
-        gap_size = 5
-        bg_col = rgb(000000)
-        workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
-
-        enable_gesture = false # laptop touchpad, 4 fingers
-        gesture_distance = 300 # how far is the "max"
-        gesture_positive = false
-    }
-}
+# Fix some dragging issues with XWayland
+windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
