Debugging and styling

--- a/hyprland/general.conf
+++ b/hyprland/general.conf
@@ -1,10 +1,10 @@
-monitor= , preferred, auto, 1.2, transform, 0
+monitor= , preferred, auto, 1.6
 
 general {
     gaps_in = 5
-    gaps_out = 5
+    gaps_out = 10
 
-    border_size = 2
+    border_size = 3
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
     resize_on_border = true
@@ -22,7 +22,8 @@ general {
 decoration {
     rounding = 10
 
-    active_opacity = 1.0
+    fullscreen_opacity = 1
+    active_opacity = 0.8
     inactive_opacity = 0.8
     
     blur {
@@ -124,11 +125,13 @@ input {
     
     follow_mouse = 1
 
+    accel_profile = flat
+    sensitivity = 1
     touchpad {
         natural_scroll = yes
         disable_while_typing = true
         clickfinger_behavior = true
-        scroll_factor = 0.5
+        scroll_factor = 0.2
     }
 }
 
