--- a/hyprland/keybinds.conf
+++ b/hyprland/keybinds.conf
@@ -1,16 +1,16 @@
 # Brightness and volume control
-bindle= , XF86MonBrightnessUp, exec, brightnessctl s 5%+
-bindle= , XF86MonBrightnessDown, exec, brightnessctl s 5%-
-bindle= , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%+
-bindle= , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
+bindle = , XF86MonBrightnessUp, exec, brightnessctl s 5%+
+bindle = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
+bindle = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%+
+bindle = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
 bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle
 bindl = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle
 
 # Media control
-bindl= , XF86AudioPlay, exec, playerctl play-pause
-bindl= , XF86AudioPause, exec, playerctl play-pause
-bindl= , XF86AudioNext, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
-bindl= , XF86AudioPrev, exec, playerctl previous
+bindl = , XF86AudioPlay, exec, playerctl play-pause
+bindl = , XF86AudioPause, exec, playerctl play-pause
+bindl = , XF86AudioNext, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
+bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Screenshot and color picker
 bind = Super+Shift, S, exec, hyprshot --freeze --clipboard-only --mode region --silent
@@ -77,10 +77,8 @@ bind = Alt, Tab, bringactivetotop
 bind = Super, Q, killactive
 bind = Super+Shift+Alt, Q, exec, hyprctl kill # Force
 
-# Open Launcher
-bindid = Super, Super_L, , exec, wofi -show drun
-binditn = Super, catchall, submap, reset
-
+# Open Launcher - TODO Fix this
+bindr = Super, Super_L, exec, if pgrep -x wofi; then killall wofi; else wofi --show drun; fi
 # Launch apps
 bind = Super, T, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # Terminal
 bind = Super, E, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "dolphin" "nautilus" "nemo" "thunar" "kitty -1 fish -c yazi" # File manager
