--- a/hyprpaper.conf
+++ b/hyprpaper.conf
@@ -1,5 +1,5 @@
 # preload = /path/to/image.png
-# wallpaper = , /path/to/image.png # Set all wallpapers monitor, wallpaper
+# wallpaper = , /path/to/image.png # Set all wallpapers (monitor, wallpaper)
 
 splash = false
 ipc = off
