--- a/hyprland/execs.conf
+++ b/hyprland/execs.conf
@@ -1,12 +1,14 @@
-# Set wallpaper
-exec-once = hyprpaper
-
 # Core components (authentication, lock screen, notification daemon)
 exec-once = gnome-keyring-daemon --start --components=secrets
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = hypridle
 exec-once = dbus-update-activation-environment --all
 exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Some fix idk
+exec-once = hypridle
+
+
+# Start wallpaper and panel
+exec-once = hyprpaper
+exec-once = hyprpanel
 # exec-once = hyprpm reload # Uncomment to set up any plugins
 
 # Set up clipboard history
