Save all changes made during testing

--- a/hypridle.conf
+++ b/hypridle.conf
@@ -1,12 +1,12 @@
 # Lock before sleep
 general {
-    before_sleep_cmd = loginctl lock-session
+    before_sleep_cmd = hyprlock
 }
 
 # Lock after 5 min
 listener {
     timeout = 300
-    on-timeout = loginctl lock-session
+    on-timeout = hyprlock
 }
 
 # Turn off display after 10 min
