--- a/hyprland/keybinds.conf
+++ b/hyprland/keybinds.conf
@@ -77,8 +77,9 @@ bind = Alt, Tab, bringactivetotop
 bind = Super, Q, killactive
 bind = Super+Shift+Alt, Q, exec, hyprctl kill # Force
 
-# Open Launcher - TODO Fix this
+# Open launcher
 bindr = Super, Super_L, exec, if pgrep -x wofi; then killall wofi; else wofi --show drun; fi
+
 # Launch apps
 bind = Super, T, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # Terminal
 bind = Super, E, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "dolphin" "nautilus" "nemo" "thunar" "kitty -1 fish -c yazi" # File manager
@@ -87,6 +88,6 @@ bind = Super, C, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh
 bind = Super, I, exec, XDG_CURRENT_DESKTOP=gnome ~/.config/hypr/hyprland/scripts/launch_first_available.sh "systemsettings" "gnome-control-center" "better-control" # Settings
 
 # Session control
-bind = Super, L, exec, loginctl lock-session # Lock
+bind = Super, L, exec, hyprlock # Lock
 bindl = Super+Shift, L, exec, sleep 0.1 && systemctl suspend || loginctl suspend # Sleep
 bind = Ctrl+Super+Shift, L, exec, systemctl poweroff || loginctl poweroff # Shutdown
