--- a/hyprland/general.conf
+++ b/hyprland/general.conf
@@ -18,13 +18,18 @@ general {
     }
 }
 
+# Force no scaling on wayland apps or they will be blurry
+xwayland {
+    force_zero_scaling = true
+}
+
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 14
 
     fullscreen_opacity = 1
-    active_opacity = 0.8
-    inactive_opacity = 0.8
+    active_opacity = 0.85
+    inactive_opacity = 0.85
     
     blur {
         enabled = true
@@ -52,9 +57,7 @@ decoration {
     }
     
     # Dim
-    dim_inactive = true
-    dim_strength = 0.025
-    dim_special = 0.07
+    dim_inactive = false
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
@@ -124,7 +127,7 @@ input {
     repeat_rate = 35
     
     follow_mouse = 1
-
+    
     accel_profile = flat
     sensitivity = 1
     touchpad {
