--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -8,6 +8,7 @@ $font_material_symbols = Material Symbols Rounded
 
 background {
     color = rgba(181818FF)
+    path = /home/sam/pictures/wallpaper.jpg
     # path = {{ SWWW_WALL }}
     
     # path = screenshot
